--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@ repository: sproogen/resume-theme
 # favicon: images/favicon.ico
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Weiyu Liu
+title: PhD @ Georgia Tech
+email: wliu88 AT gatech Dot edu
 
 # Social links
 twitter_username: facespics
