--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,19 @@ repository: sproogen/resume-theme
 
 # Personal info
 name: Weiyu Liu
-title: PhD @ Georgia Tech
+title: Robotics PhD @ Georgia Tech
 email: wliu88 AT gatech Dot edu
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+# twitter_username: facespics
+github_username:  wliu88
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+# instagram_username: chillwildlife
+# linkedin_username: jameswgrant
 # pinterest_username: jekyll
-youtube_username: globalmtb
+# youtube_username: globalmtb
 # googleplus_username: +jekyll
 
 # About Section
