--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ about_profile_image: images/profile.jpg # Directory of profile image (eg. images
 about_content: | # this will include new lines to allow paragraphs
   I am a Robotics PhD student at Georgia Institute of Techonology, working with professor [Sonia Chernova](https://www.cc.gatech.edu/~chernova/).
   My research focuses on ***Semantic Reasoning for Robotics***.
-  Specifically, I am interested in making robots that can operate in diverse and changing environments, such as such as hospitals and homes, by leveraging ***knowledge extraction***, ***representation***, and ***reasoning***.
+  Specifically, I am interested in making robots that can operate in diverse and changing environments, such as hospitals and homes, by leveraging ***knowledge extraction***, ***representation***, and ***reasoning***.
   I am currently developing methods for reasoning with large-scale knowledge bases.
 
   Prior to joining the PhD program, I received my Bachelor's degree in Electrical Engineering from Georgia Tech.
