--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: wliu88 AT gatech Dot edu
 
 # Social links
 #twitter_username: jekyllrb
-github_username:  wliu88
+github_username: wliu88
 #dribbble_username: jekyll
 facebook_username: WeiyuLiu69
 #flickr_username: jekyll
@@ -21,6 +21,7 @@ facebook_username: WeiyuLiu69
 #pinterest_username: jekyll
 #youtube_username: jekyll
 #googleplus_username: +jekyll
+#googlescholar_username: wliu88
 
 # About Section
 # about_title: About Me (Use this to override about section title)
@@ -29,7 +30,7 @@ about_content: | # this will include new lines to allow paragraphs
   I am a Robotics PhD student at Georgia Institute of Techonology, working with professor [Sonia Chernova](https://www.cc.gatech.edu/~chernova/).
   My research focuses on ***Semantic Reasoning for Robotics***.
   Specifically, I am interested in making robots that can operate in diverse and changing environments, such as hospitals and homes, by leveraging ***knowledge extraction***, ***representation***, and ***reasoning***.
-  I am currently developing methods for reasoning with large-scale knowledge bases.
+  I am currently developing methods for large-scale knowledge base reasoning and semantic grasping.
 
   Prior to joining the PhD program, I received my Bachelor's degree in Electrical Engineering from Georgia Tech.
 #
