added google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ title: Robotics PhD @ Georgia Tech
 email: wliu88 AT gatech Dot edu
 #phone: Your phone number (optional)
 #website: Your website (eg. https://google.com)(optional)
+google_scholar: https://scholar.google.com/citations?user=PHi0YEQAAAAJ&hl=en
 
 # Social links
 #twitter_username: jekyllrb
